Added Turbo Model for HTML

--- a/client/whisper_client.html
+++ b/client/whisper_client.html
@@ -148,6 +148,7 @@
                 <option value="small">Small</option>
                 <option value="medium">Medium</option>
                 <option value="large">Large</option>
+                <option value="turbo">Turbo</option>
             </select>
 
             <label for="languageSelect">Language:</label>
@@ -197,6 +198,7 @@
                     <option value="small">Small</option>
                     <option value="medium">Medium</option>
                     <option value="large">Large</option>
+                    <option value="turbo">Turbo</option>
                 </select>
 
                 <label for="uploadLanguageSelect">Language:</label>
